--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -13,7 +13,7 @@
           <ion-list inset>
             
             <ion-item>
-              <ion-input type="text" placeholder="Email" name="email" [(ngModel)]="registerCredentials.email" required></ion-input>
+              <ion-input type="text" placeholder="Username or Email" name="usernameORemail" [(ngModel)]="registerCredentials.usernameORemail" required></ion-input>
             </ion-item>
             
             <ion-item>
