--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,9 @@
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
- 
+
+
+ <script src="http://maps.google.com/maps/api/js?key=AIzaSyC8_aehwvta0ATqFTuk6706EdMko_cLIEQ"></script>
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
 
