--- a/src/pages/daily-rec/daily-rec.html
+++ b/src/pages/daily-rec/daily-rec.html
@@ -8,7 +8,7 @@
     </ion-buttons>
 
     <ion-title>
-   Recomendation
+   Today's Recomendation
     </ion-title>
 
     <ion-buttons end>
@@ -25,17 +25,6 @@
 <h1>{{crop.cropname}}</h1>
 <h3>@ {{crop.izname}}, {{crop.farmname}}</h3>
 
-<canvas baseChart width="100%" height="100%"
- [datasets]="lineChartData"
- [labels]="lineChartLabels"
- [legend]="lineChartLegend"
- [chartType]="lineChartType"
- (chartHover)="chartHovered($event)"
- (chartClick)="chartClicked($event)">
-   
-</canvas> 
-
-  <h1>Today's Recomendation</h1>
   <ion-item>
     <ion-input type="text" [(ngModel)]="rec.amount" name="todaysRec" required (change)="changeAmount()"></ion-input>
     <ion-select (ionChange)="changeAmountType()" [(ngModel)]="rec.type" name="amountType" required>
