--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,7 +8,7 @@
     </ion-buttons>
 
     <ion-title>
-      Home
+      H2OCrop
     </ion-title>
 
     <ion-buttons end>
@@ -21,37 +21,33 @@
 </ion-header>
  
 <ion-content class="home" padding>
-  
-  <h1>Welcome, {{user.fullname}} !</h1>
+ 
+  <h1>{{user.username}}'s crops</h1>
  
   <ion-card *ngFor="let crop of crops" >
 
     <ion-list (click)="dailyRec(crop)">
-         <ion-item-sliding >
-            <ion-item>
-              <h2>  {{crop.farmname}} </h2>
-                <ion-item>
-               <ion-icon name="leaf" item-left></ion-icon>
-               {{crop.izname}}</ion-item>
-               <ion-item>
-              <ion-icon name="flower" item-left></ion-icon>
-              {{crop.cropname}}</ion-item>
-              
+      <ion-item-sliding >
+        <ion-item>
+          <ion-item>
+            <ion-icon name="flower" item-left></ion-icon>
+            {{crop.cropname}}
+          </ion-item>
+          <ion-item>
+            <ion-icon name="leaf" item-left></ion-icon>
+            {{crop.izname}}, {{crop.farmname}}
+          </ion-item>
+        </ion-item> 
 
-            </ion-item>
- 
-            <ion-item-options>
-                <button ion-button icon-only (click)="editNote(crop)" light>
-                    <ion-icon name="paper"></ion-icon>
-                </button>
-                <button ion-button icon-only (click)="deleteNote(crop)" danger>
-                    <ion-icon name="trash"></ion-icon>
-                </button>
-            </ion-item-options>
- 
-        </ion-item-sliding>
- 
+        <ion-item-options>
+            <button ion-button icon-only (click)="editNote(crop)" light>
+                <ion-icon name="paper"></ion-icon>
+            </button>
+            <button ion-button icon-only (click)="deleteNote(crop)" danger>
+                <ion-icon name="trash"></ion-icon>
+            </button>
+        </ion-item-options>
+      </ion-item-sliding>
     </ion-list>
   </ion-card>
-
 </ion-content>
