Show All Farms & Zones

--- a/src/pages/add/add.html
+++ b/src/pages/add/add.html
@@ -26,7 +26,10 @@
 
       </ion-item>
     </ion-col>
-    <ion-col width-20><ion-icon name="add-circle" (click)="launcharFarmPage()"></ion-icon>
+    <ion-col width-20>
+      <button ion-button icon-only (click)="launcharFarmPage()">
+        <ion-icon name="add-circle"></ion-icon>
+      </button>
 
   </ion-col>   
 </ion-row>
