--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -33,10 +33,10 @@
           {{crop.cropname}}
         </ion-item>
         <ion-item-options>
-            <button ion-button icon-only (click)="editNote(crop)" light>
+            <button ion-button icon-only (click)="editCrop(crop)" light>
                 <ion-icon name="paper"></ion-icon>
             </button>
-            <button ion-button icon-only (click)="deleteNote(crop)" danger>
+            <button ion-button icon-only (click)="deleteCrop(crop)" danger>
                 <ion-icon name="trash"></ion-icon>
             </button>
         </ion-item-options>
