--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,5 @@
 <ion-header>
   <ion-navbar color="secondary">
-    
     <ion-buttons start>
       <button ion-button icon-only menuToggle>
         <ion-icon name="menu"></ion-icon>
@@ -16,7 +15,6 @@
         <ion-icon name="add"></ion-icon>
       </button>
      </ion-buttons>
-
   </ion-navbar>
 </ion-header>
  
@@ -24,31 +22,31 @@
  
   <h1>{{user.username}}'s Crops</h1>
 
-  <ion-card *ngFor="let crop of crops"  (click)="dailyRec(crop)">
+  <ion-card *ngFor="let farm of farms">
+    <ion-card-header>
+      <ion-icon name="leaf" class="leaf" item-left></ion-icon>
+      {{farm.farmname}}
+    </ion-card-header>
 
-    <ion-list>
-      <ion-item-sliding >
+    <ion-card-content>
+      <ion-list *ngFor="let zone of farm.zones">
         <ion-item>
-          <ion-icon name="flower" item-left></ion-icon>
-          {{crop.cropname}}
-        </ion-item>
-        <ion-item-options>
-            <button ion-button icon-only (click)="editCrop(crop)" light>
-                <ion-icon name="paper"></ion-icon>
-            </button>
-            <button ion-button icon-only (click)="deleteCrop(crop)" danger>
-                <ion-icon name="trash"></ion-icon>
-            </button>
-        </ion-item-options>
-      </ion-item-sliding>
-        <ion-item>
-          <ion-icon name="water" item-left></ion-icon>
-          {{crop.izname}}
+          <ion-icon name="water" class="water" item-left></ion-icon>
+          {{zone.izname}}
         </ion-item> 
-        <ion-item>
-          <ion-icon name="leaf" item-left></ion-icon>
-          {{crop.farmname}}
-        </ion-item>
-    </ion-list>
+        
+        <ion-item-sliding *ngFor="let crop of zone.crops">
+          <ion-item (click)="dailyRec(crop)">
+            <ion-icon name="flower" class="flower" item-left></ion-icon>
+            {{crop.cropname}}
+          </ion-item>
+          <ion-item-options>
+              <button ion-button icon-only (click)="deleteCrop(crop)" danger>
+                  <ion-icon name="trash"></ion-icon>
+              </button>
+          </ion-item-options>
+        </ion-item-sliding>
+      </ion-list>
+    </ion-card-content>
   </ion-card>
 </ion-content>
