--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -2,14 +2,18 @@
 
   <ion-navbar color="secondary">
     <ion-buttons start>
-      <button ion-button icon-only (click)= "home()">
-        <ion-icon name="home"></ion-icon>
+      <button ion-button icon-only menuToggle>
+        <ion-icon name="menu"></ion-icon>
       </button>
     </ion-buttons>
 
     <ion-title>Account Info</ion-title>
 
     <ion-buttons end>
+      <button ion-button icon-only *ngIf="settings.typeofuser==='Admin'" (click)="allCrops()">
+        <ion-icon name="flower"></ion-icon>
+      </button>
+
       <button ion-button icon-only *ngIf="!edit" (click)="enable()">
         <ion-icon name="paper"></ion-icon>
       </button>
