--- a/src/pages/add/add.html
+++ b/src/pages/add/add.html
@@ -57,10 +57,12 @@
   <ion-col >
     <ion-item>
       <ion-label floating>Crop</ion-label>
-            <ion-select [(ngModel)]="crop.infoid" name="crop" required>
-              <ion-option *ngFor="let info of cropinfos" value="{{info.infoid}}">{{info.cropname}} - {{info.plantdate}} @ {{info.region}}</ion-option>
-              
-            </ion-select>
+          
+        <ion-select [(ngModel)]="crop.infoid" name="crop" required>
+          <ion-option *ngFor="let info of cropinfos" value="{{info.infoid}}">
+            <ion-item class="item-text-wrap">{{info.cropname}} - {{info.plantdate}} @ {{info.region}}</ion-item>
+          </ion-option>
+        </ion-select>
     </ion-item>
   </ion-col>   
 </ion-row>
