--- a/src/pages/all-cropinfo/all-cropinfo.html
+++ b/src/pages/all-cropinfo/all-cropinfo.html
@@ -14,10 +14,14 @@
 </ion-header>
 
 <ion-content padding>
-   <ion-card *ngFor="let info of cropinfos" >
+   <ion-card *ngFor="let category of categories" >
+    <ion-card-header>
+      <ion-icon name="filing" class="filing" item-left></ion-icon>
+      {{category.category}}
+    </ion-card-header>
     <ion-card-content>
       <ion-list>
-        <ion-item-sliding>
+        <ion-item-sliding *ngFor="let info of category.cropinfos">
           <ion-item>
             <ion-icon name="flower" class="flower" item-left></ion-icon>
             {{info.cropname}} - {{info.plantdate}} @ {{info.region}}
