--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -59,8 +59,8 @@
           </ion-item-sliding> 
           
           <ion-item-sliding *ngFor="let crop of zone.crops">
-            <ion-item (click)="dailyRec(crop)">
-              <ion-icon name="flower" class="flower" item-left></ion-icon>
+            <ion-item (click)="dailyRec(crop)" *ngIf="crop.cropstatus==='On Going'">
+              <ion-icon  name="flower" class="flower" item-left></ion-icon>
               {{crop.cropname}}
             </ion-item>
             <ion-item-options>
@@ -68,6 +68,10 @@
                     <ion-icon name="trash"></ion-icon>
                 </button>
             </ion-item-options>
+            <ion-item (click)="dailyRec(crop)" class="finished"*ngIf="crop.cropstatus==='Finished'" >
+              <ion-icon  name="flower" class="finished" item-left></ion-icon>
+              {{crop.cropname}}
+            </ion-item>
           </ion-item-sliding>
         </div>
       </ion-list>
