--- a/src/pages/edit-farm/edit-farm.html
+++ b/src/pages/edit-farm/edit-farm.html
@@ -32,7 +32,7 @@
     </ion-select>
 </ion-item>
 <ion-item>
-  <button ion-button block (click)="getGPS()">Use GPS</button>
+  <button ion-button block (click)="getGPS()">GPS Location</button>
 </ion-item>
 
 </form>
