--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -7,7 +7,7 @@
     <ion-col></ion-col>
   </ion-row>
   <div class="login-box">
-    <form (ngSubmit)="login()" #registerForm="ngForm">
+    <form #registerForm="ngForm">
       <ion-row>
         <ion-col>
           <ion-list inset>
@@ -26,7 +26,7 @@
       
       <ion-row>
         <ion-col class="signup-col">
-          <button ion-button class="submit-btn" full type="submit" [disabled]="!registerForm.form.valid">Login</button>
+          <button ion-button class="submit-btn" full (click)="login()" [disabled]="!registerForm.form.valid">Login</button>
           <button ion-button class="register-btn" block clear (click)="createAccount()">Create New Account</button>
           <button ion-button class="forgotPassword-btn" block clear (click)="forgotPassword()">Forgot Password or Username</button>
 
